--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+main{
+    max-width: 800px
+}
+
 nav{
     background-color: darkblue;
     padding: 10px;
@@ -13,7 +17,7 @@ h1{
     color: darkblue;
 }
 
-img{
+main img{
     width:150px ;
     height:auto ;
     border: 1px solid black ;
@@ -22,5 +26,26 @@ img{
 }
 
 p{
-    padding: 10px;
+    padding: 0;
+}
+aside{
+    background-color: lightblue;
+    padding: 20px;
+    margin: 20px 0;
+    border: 2px solid darkblue;
+    color: #000;
+    width: auto;
+    
+}
+
+aside img{
+    width: 200px
+    height: auto;
+    
+}
+
+footer{
+    text-align: center;
+    margin-top: 20px;
+    border-top: 2px solid black;
 }
