--- a/week03/styles/overlay.css
+++ b/week03/styles/overlay.css
@@ -17,7 +17,7 @@ h1 {
 
 .herodiv {
 	margin: 10px auto;
-	position: relative; /* If removed, what happens? */
+	position: relative; /* If removed, what happens? The position shifts to the bottom left overlapping the footer a bit*/
 }
 
 .herodiv img {
