--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -162,3 +162,123 @@ footer p{
   float: right;
 }
 
+
+/*The Css for the contact page starts from here. But it uses the same heading and footer*/
+
+.contacts {
+  text-align: left;
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+  
+}
+
+form {
+  max-width: 600px;
+  margin: 1rem auto;
+  background-color: #ffffff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+  background-color: var(--accent1-color);
+  text-align: center;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+  color: #333;
+  font-weight: bold;
+
+}
+
+.contact-main{
+  background-color: var(--accent2-color);
+
+}
+
+.contact-info{
+  color: var(--secondary-color);
+}
+
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 0.7rem;
+  margin-bottom: 1.2rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  margin-right: 8px;
+}
+
+button[type="submit"] {
+  background-color: #0077b6;
+  color: #fff;
+  border: none;
+  padding: 0.8rem 1.5rem;
+  border-radius: 4px;
+  font-size: 1rem;
+  
+}
+
+
+
+  .contact-section{
+    margin: 20px;
+  }
+
+  iframe{
+    width: 820px;
+    height: 300px;
+    border: 0;
+    border-radius: 8px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  fieldset{
+    margin: 10px;
+
+  }
+
+     
+/*
+.employee-gallery {
+  display: flex;
+  justify-content:center; 
+  gap: 2rem; 
+  text-align: center;
+}
+*/
+.employee-gallery {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  
+}
+
+.employee-gallery figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.employee-gallery figure figcaption {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+section.employees > h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+
+
